@@ -10,8 +10,6 @@ FG.baseURL       = window.location.origin;  // EG: "http://localhost:3000"
 
 FG.ws            = null;     // WebSocket connector to localServer      (see fem_core_WSockHandler.js)
 
-FG.DCH_BASE      = null;     // BASECLASS from which ALL DocComponentHandlers must inherit from
-
 FG.docTree       = [];       // [{id,uuid,name,listOrder,parent,li}[,...]] ordered list of .dia "docTree" table
                                 // note that li is not from the db but is added during showDocTree()
 
