@@ -3,8 +3,10 @@ Review the licenses and licensed files to make sure everything's in place as it 
 -----------------------------------------------------------------------------------------------------------------------
 checkout quilljs.com
 -----------------------------------------------------------------------------------------------------------------------
-Remaster addTrackedListener() etc... into a class, and supply it in DCH_BASE such that each plugin owns its own listeners
-and I won't have to worry about one listener removing from another
+
+
+Come up with a simple WS packet for plugins to use,  something that can create/delete tables in the DB so that they
+never have to modify the server or client .js in order to add features to the serverside
 
 -----------------------------------------------------------------------------------------------------------------------
 creating a simple painter plugin as an example,  howto/what to change/what to do.
