@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node server.js"
   },
-  "license": "Apache-2.0",
+  "license": "AGPLv3",
   "author": "Ron Stanions/DragonsFire Creations",
   "dependencies": {
     "express": "^4.21.2",
