@@ -1,7 +1,10 @@
 2025-05- ------------------------------------------------------------------------------------------------------------
 2025-05- ------------------------------------------------------------------------------------------------------------
 2025-05- ------------------------------------------------------------------------------------------------------------
-2025-05- ------------------------------------------------------------------------------------------------------------
+2025-05-26 ------------------------------------------------------------------------------------------------------------
+* various cleanups,  renamed a .doc, got rid of some stale files,  fixed a .gitignore, etc...
+* fixed some old license references to Apache  --> AGPLv3
+* turned what was FG.DCH_BASE into a real importable class in the new html/modules/classes directory
 
 2025-05-25 ------------------------------------------------------------------------------------------------------------
 * finished the DocFileFormat 1.1.odt documentation
